Update `README` file to add solutions URLs Fix an issue with text alignment

--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,10 @@ main {
   width: 100%;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .img-rounded {
   width: 5.5rem;
   border-radius: 50%;
